<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".hotel.SearchActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp" >

        <TextView
            android:id="@+id/title_opening"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/montserrat_alternates_bold"
            android:gravity="center"
            android:text="@string/title_opening"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/desc_opening"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/title_opening"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:text="@string/description_opening"
            android:textSize="16sp" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/desc_opening"
            android:layout_marginStart="10dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="25dp"
                android:padding="10dp">

                <TextView
                    android:id="@+id/pick_a_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="20dp"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/date_pick"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btn_check_in"
                    style="@style/regularButton_level1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/pick_a_date"
                    android:layout_alignParentStart="false"
                    android:layout_toStartOf="@id/textGap"
                    android:onClick="CheckIn"
                    android:text="@string/check_in"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/textGap"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/pick_a_date"
                    android:layout_centerInParent="false"
                    android:layout_centerHorizontal="true" />

                <Button
                    android:id="@+id/btn_check_out"
                    style="@style/regularButton_level1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/pick_a_date"
                    android:layout_toEndOf="@id/textGap"
                    android:onClick="CheckOut"
                    android:text="@string/check_out"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/text_check_in"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/btn_check_in"
                    android:layout_alignParentStart="false"
                    android:layout_toStartOf="@id/textGap"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/choose" />

                <TextView
                    android:id="@+id/text_check_out"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/btn_check_out"
                    android:layout_toEndOf="@id/textGap"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/choose" />
            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/cardDate"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="10dp" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="25dp"
                android:padding="10dp">

                <TextView
                    android:id="@+id/roomPick"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="20dp"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/room_pick"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txt_totalRoom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/roomPick"
                    android:layout_alignParentStart="true"
                    android:layout_margin="5dp"
                    android:text="@string/total_rooms" />

                <TextView
                    android:id="@+id/showRoom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/roomPick"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/showTotalRoom" />

                <Spinner
                    android:id="@+id/spinnerRoom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/showRoom"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginBottom="5dp"
                    tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/btn_submitSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="false"
            android:layout_alignParentBottom="true"
            android:onClick="SubmitSearch"
            style="@style/regularButton_level1"
            android:text="@string/search_btn" />

    </RelativeLayout>

</ScrollView>