<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:fillViewport="true"
    tools:context=".LoginActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="50dp" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="30dp"
            tools:ignore="UselessParent" >

            <TextView
                android:id="@+id/titleLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignWithParentIfMissing="false"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/audiowide"
                android:text="@string/title_login"
                android:textAlignment="center"
                android:textSize="35sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/inputEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/titleLogin"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="100dp"
                android:layout_marginBottom="10dp"
                android:ems="10"
                android:hint="@string/input_email"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                tools:ignore="TextContrastCheck" />

            <EditText
                android:id="@+id/inputPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/inputEmail"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="100dp"
                android:ems="10"
                android:hint="@string/input_password"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:minHeight="48dp"
                tools:ignore="TextContrastCheck" />

            <Button
                style="@style/regularButton_level1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/inputPassword"
                android:layout_centerHorizontal="true"
                android:onClick="login"
                android:text="@string/submit_login"
                tools:ignore="TextContrastCheck" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

</ScrollView>