<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/detail_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".hotel.DetailContent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp">

        <TextView
            android:id="@+id/title_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:fontFamily="@font/montserrat_alternates_bold"
            android:gravity="center"
            android:text="@string/title_hotel"
            android:textSize="28sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageContent"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_below="@id/title_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="20dp"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/hotel1"
            tools:ignore="ContentDescription,ImageContrastCheck" />

        <TextView
            android:id="@+id/desc_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/imageContent"
            android:fontFamily="sans-serif-medium"
            android:paddingStart="16dp"
            android:paddingTop="8dp"
            android:paddingEnd="16dp"
            android:paddingBottom="8dp"
            android:text="@string/desc_hotel"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/facility"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/desc_content"
            android:text="@string/lorem_ipsum" />
    </RelativeLayout>
</ScrollView>