<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".hotel.SearchResult" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:padding="5dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/card_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/title_result"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="@font/montserrat_alternates_bold"
                    android:text="@string/title_result"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/data_check_in"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:text="@string/data_checkIn"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/data_check_out"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:text="@string/data_checkOut"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/data_total_rooms"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:text="@string/data_totalRooms"
                    android:textSize="15sp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/list_hotels"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/card_result"
            android:layout_marginTop="10dp">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/hotel_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="10dp" />
        </androidx.cardview.widget.CardView>

    </RelativeLayout>
</ScrollView>